2010-04-13  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Restrict to os=linux.

2010-04-12  Andrew Overholt  <overholt@redhat.com>

	* feature.properties: Match consistent license text (bug #306627).

2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Bump version to 0.3.0.

2009-07-21  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added ui.editor plugin. Recomputed dependencies.

2009-06-26  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added doc plugin. Recomputed dependencies.

2009-06-04  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Removing birt.chart from deps.

2009-05-28  Elliott Baron  <ebaron@redhat.com>

	* feature.properties: Fix featureProvider key.

2009-05-27  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Removing ".qualifier" from profiling feature dep.

2009-05-26  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Make profiling feature dependency; version >= 0.2.0.

2009-05-25  Elliott Baron  <ebaron@redhat.com>
	
	#275685
	* feature.xml: Maintenance update for version string issues on Debian.
	
2009-05-20  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Remove '.feature' from feature ID.
	
2009-05-19  Andrew Overholt  <overholt@redhat.com>

	* feature.properties: Change provider from Eclipse.org to Eclipse.

2009-04-03  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: 0.2.0 version.
	
2009-03-13  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Add cachegrind plugin.

2009-01-28  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Removed feature dependency, added console deps for launch.

2009-01-14  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Re-add update site information (sorry).

2009-01-14  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Removed update site information.

2009-01-09  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added all used BIRT plugins as dependencies.

2009-01-08  Elliott Baron  <ebaron@redhat.com>
